tests/paczka1/fuzzy1/17505002.err
Error in line 2: nEk S469 43,3
Error in line 7: DzQdTnG S469 18,0
Error in line 15: gp6R0g S469 25,4
Error in line 13: RLBV1kC7wPJ A409 69,7
Error in line 20: RLBV1kC7wPJ S469 22,8
Error in line 6: AemuwA S546 73,7
